server: Use QHostAddress::Any if no listening address is set

This ensures we listen on both IPv4 and IPv6, instead of using "0.0.0.0"
which implies we only listen on IPv4.

BUG: 488884


(cherry picked from commit 5dabf37b5556dd596de2392cd60b6d310ae5ba04)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>